service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bekir-kubernetes-service
spec:
  type: NodePort
  selector:
    app: bekir-kubernetes-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
