ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bekir-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bekir.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bekir-kubernetes-service
            port:
              number: 8000
